플랫폼 리펠토링

--- a/jwebppy/src/main/resources/templates/platform/mgmt/content/main.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/content/main.html
@@ -15,7 +15,7 @@
 		<div class="row">
 			<div class="nine wide column">
 				<div class="ui dividing small header">Structure</div>
-				<div class="ui grid">
+				<!-- div class="ui grid">
 					<div class="row">
 						<div class="column">
 							<div class="ui icon input">
@@ -23,7 +23,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div -->
 				<div class="ui segment teal">
 					<div id="TREE_items"></div>
 				</div>
