--- a/jwebppy/src/main/resources/templates/platform/mgmt/content/main.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/content/main.html
@@ -7,7 +7,7 @@
 <th:block layout:fragment="content">
 <!-- body start -->
 <div class="ui dividing header">
-  Menu Management
+  Content
   <div class="sub header">You can create Page or consist of Menu and Role. The content is translated into other languages.</div>
 </div>
 <div class="ui segment">
