--- a/jwebppy/src/main/resources/templates/platform/mgmt/i18n/main.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/i18n/main.html
@@ -7,7 +7,7 @@
 <th:block layout:fragment="content">
 <div class="ui dividing header">
   Translation
-  <div class="sub header">Contents are translated into some languages as follows. If there is not a word matches language, system will show it in English.</div>
+  <div class="sub header">Contents are translated into some languages on this menu.</div>
 </div>
 <div class="ui segment">
 	<form id="FORM_search" class="ui form" autocomplete="off" onsubmit="return false;">
