--- a/jwebppy/src/main/resources/templates/platform/layout/common/fragments/bottom.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/common/fragments/bottom.html
@@ -1,5 +1,6 @@
 <!-- bottom start -->
-<div class="ui inverted vertical footer segment">
+<div class="ui bottom_blank" style="width:100%; height:20px;">&nbsp;</div>
+<div class="ui bottom inverted vertical footer segment" style="position: fixed; width:100%; bottom: 0px;">
 	<!-- div class="ui center aligned container round">	
 		<div class="ui stackable inverted divided grid">
 			<div class="two wide column"></div>
@@ -27,10 +28,15 @@
 	</div>
 	<div class="ui inverted section divider"></div-->
 	<div class="ui center aligned container">
-		<img class="ui centered image" th:src="@{/portal/img/head_logo.png}" alt="Doosan CI"/>
+		<!-- img class="ui centered image" th:src="@{/portal/img/head_logo.png}" alt="jWebppy"/ -->
 		<div class="ui horizontal inverted small divided link list">
-			<a class="item" href="#" th:text="#{PLTF_TXT_0008}"></a>
+			<a class="item" href="#" th:text="#{PLTF_TXT_COPYLEFT}"></a>
 		</div>
 	</div>
 </div>
+<script>
+$(document).ready(function() {
+	$(".ui.bottom_blank").height($(".ui.bottom").height());	
+});
+</script>
 <!-- bottom end -->
