--- a/jwebppy/src/main/resources/templates/platform/security/authentication/login_form.html
+++ b/jwebppy/src/main/resources/templates/platform/security/authentication/login_form.html
@@ -199,17 +199,17 @@ $(document).ready(function() {
 <input type="hidden" id="saveUsername" name="saveUsername" />
 <div id="wrap" class="wrap"> 
 	<div id="header" class="header">
-		<div id="openNewWindow" class="button">New Window</div>
+		<div id="openNewWindow" class="button">[[#{	PLTF_LB_NEW-WINDOW}]]</div>
 	</div>
 	<div id="body" class="body">
 		<div><img id="mainImg" th:src="@{/platform/img/login/main.png}" alt="Main Image" /></div>
 		<div class="login-box">
 			<div class="title" th:text="#{PLTF_TXT_0007}"></div>
-			<div class="username"><img th:src="@{/platform/img/login/username.png}" class="login-input" alt="Username" /><input type="text" id="username" name="username" th:placeholder="#{PLTF_TXT_0002}" autofocus /></div>
-			<div class="password"><img th:src="@{/platform/img/login/password.png}" class="login-input" alt="Password" /><input type="password" id="password" name="password" th:placeholder="#{PLTF_TXT_0001}" /></div>
-			<button class="btn-login" type="button" th:text="#{PLTF_BTN_0002}"></button>
+			<div class="username"><img th:src="@{/platform/img/login/username.png}" class="login-input" alt="Username" /><input type="text" id="username" name="username" th:placeholder="#{PLTF_LB_USERNAME}" autofocus /></div>
+			<div class="password"><img th:src="@{/platform/img/login/password.png}" class="login-input" alt="Password" /><input type="password" id="password" name="password" th:placeholder="#{PLTF_LB_USERNAME}" /></div>
+			<button class="btn-login" type="button" th:text="#{PLTF_BTN_LOGIN}"></button>
 			<div class="bottom"> 
-				<div class="save-username"><img th:src="@{/platform/img/login/check.png}" class="save-username-chk" alt="Save Username" /><span>[[#{PLTF_TXT_0005}]]</span></div>
+				<div class="save-username"><img th:src="@{/platform/img/login/check.png}" class="save-username-chk" alt="Save Username" /><span>[[#{PLTF_LB_SAVE-USERNAME}]]</span></div>
 				<!-- div class="manual">
 					<select class="select-box">
 						<option>Manual Download</option>
