--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/main.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/main.html
@@ -63,7 +63,7 @@
 			<div class="ui tab attached segment teal" data-tab="account"></div>
 			<div class="ui tab attached segment teal" data-tab="contact"></div>
 			<div class="ui tab attached segment teal" data-tab="authority"></div>
-			<div class="ui tab attached segment teal" data-tab="login_history"></div>
+			<div class="ui tab attached" data-tab="login_history"></div>
 		</form>
 		<div class="AREA_moveToModifyUser">
 			<div class="ui clearing divider"></div>
