--- a/jwebppy/src/main/resources/templates/platform/layout/common/index.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/common/index.html
@@ -27,7 +27,7 @@
 	<!-- Header end -->
 	<!-- Body start -->
 	<div class="main container">
-		<div class="ui segment">
+		<div style="margin: 1em;">
 		<!-- location start -->
 		<div class="ui breadcrumb" id="AREA_breadcrumb"></div>
 		<div class="ui fitted divider"></div>
@@ -39,8 +39,5 @@
 	<!-- Bottom start -->
 	<th:block th:replace="platform/layout/common/fragments/bottom"></th:block>		
 	<!-- Bottom end -->	
-	<!-- custom JavaScript start -->
-	<th:block th:replace="platform/layout/common/fragments/common_js"></th:block>
-	<!-- custom JavaScript end -->
 </body>
 </html>
