--- a/jwebppy/src/main/resources/templates/platform/layout/common/fragments/bottom.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/common/fragments/bottom.html
@@ -35,8 +35,68 @@
 	</div>
 </div>
 <script>
+$(window).load(function() {
+	JpUiGlobal.changeSizeOfElement();
+	
+	//$(".main.pusher").css("margin-left", $(".ui.main.sidebar").width() + 5);
+});
+
 $(document).ready(function() {
-	$(".ui.bottom_blank").height($(".ui.bottom").height());	
+	$(".ui.bottom_blank").height($(".ui.bottom").height());
+
+	JpUtilsAjax.get({
+		url: JpUiGlobal.url("/platform/mgmt/content/breadcrumb"),
+		data: {"entryPoint" : location.pathname},
+		success: function(response, textStatus, jqXHR)
+		{
+			let result = response.RESULT;
+			
+			if (JpUtilsObject.isNotNull(result))
+			{
+				let breadcrumb = [];
+				breadcrumb.push("<div class='section'>Home</div>");
+				
+				for (let i=result.length-1; i>=0; i--)
+				{
+					breadcrumb.push("<div class='divider'>/</div>");
+					breadcrumb.push("<div class='section");
+					
+					if (i == 0)
+					{
+						breadcrumb.push(" active ");
+					};
+					
+					breadcrumb.push("'>" + result[i].name + "</div>");
+				};
+				
+				$("#AREA_breadcrumb").html(breadcrumb.join(""));				
+			};
+		}
+	});
+
+	$(".ui.dropdown").dropdown();
+});
+
+$(document).ajaxStart(function(event, jqXHR, ajaxOptions) {
+	JpUiDimmer.showDimmer();
+});
+
+$(document).ajaxStop(function() {
+	JpUiGlobal.changeSizeOfElement();
+	JpUiDimmer.hideDimmer();
+});
+
+$(document).ajaxError(function(event, jqXHR, ajaxSettings, thrownError) {
+	if (jqXHR.status == "401" || jqXHR.status == "403")
+	{
+		alert("[[#{PLTF_MSG_SESSION_EXPIRED}]]");
+		document.location.href = "/";
+	}
+	else
+	{
+		alert("[[#{PLTF_MSG_ERROR_MESSAGE}]]");
+		//document.location.href = "[[${T(org.jwebppy.platform.core.PlatformConfigVo).ERROR_PAGE_URL}]]";
+	};
 });
 </script>
 <!-- bottom end -->
