--- a/jwebppy/src/main/resources/templates/platform/layout/popup/index.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/popup/index.html
@@ -23,21 +23,14 @@
 	<!-- Header end -->
 	<!-- Body start -->
 	<div class="main container">
-		<div class="ui celled grid">
-			<div class="row">
-				<div class="sixteen wide column">
-					<!-- location start -->
-					<th:block layout:fragment="content"></th:block>
-				</div>			
-			</div>
+		<div style="margin: 1em;">
+		<!-- location start -->
+		<th:block layout:fragment="content"></th:block>
 		</div>
 	</div>
 	<!-- Body end -->
 	<!-- Bottom start -->
 	<th:block th:replace="platform/layout/popup/fragments/bottom"></th:block>		
-	<!-- Bottom end -->	
-	<!-- custom JavaScript start -->
-	<th:block th:replace="platform/layout/popup/fragments/common_js"></th:block>
-	<!-- custom JavaScript end -->
+	<!-- Bottom end -->
 </body>
 </html>
