--- a/jwebppy/src/main/resources/templates/platform/security/authentication/login_form.html
+++ b/jwebppy/src/main/resources/templates/platform/security/authentication/login_form.html
@@ -44,13 +44,13 @@ function loginFormCheck()
 {
 	if ($.trim($("#username").val()) == "")
 	{
-		alert("[[#{PLTF_MSG_0005}]]");
+		alert("[[#{PLTF_MSG_LOGIN_EMPTY_USERNAME}]]");
 		$("#username").focus();
 		return false;
 	}
 	else if ($.trim($("#password").val()) == "")
 	{
-		alert("[[#{PLTF_MSG_0006}]]");
+		alert("[[#{PLTF_MSG_LOGIN_EMPTY_PWD}]]");
 		$("#password").focus();			
 		return false;				
 	};
@@ -117,15 +117,15 @@ function loginStep2()
 
 			if (status == "401")
 			{
-				alert("[[#{PLTF_MSG_0004}]]");
+				alert("[[#{PLTF_MSG_LOGIN_AUTHENTICATION_FAILED}]]");
 			}
 			else if (status == "403")
 			{
-				alert("[[#{PLTF_MSG_0050}]]");
+				alert("[[#{PLTF_MSG_LOGIN_HAVE_NO_AUTHORITY}]]");
 			}
 			else if (status == "423")
 			{
-				alert("[[#{PLTF_MSG_ACCOUNT_LOCKED}]]");
+				alert("[[#{PLTF_MSG_LOGIN_ACCOUNT_LOCKED}]]");
 			};
 		},
 		complete: function(jqXHR, textStatus)
@@ -206,7 +206,7 @@ $(document).ready(function() {
 		<div class="login-box">
 			<div class="title" th:text="#{PLTF_TXT_0007}"></div>
 			<div class="username"><img th:src="@{/platform/img/login/username.png}" class="login-input" alt="Username" /><input type="text" id="username" name="username" th:placeholder="#{PLTF_LB_USERNAME}" autofocus /></div>
-			<div class="password"><img th:src="@{/platform/img/login/password.png}" class="login-input" alt="Password" /><input type="password" id="password" name="password" th:placeholder="#{PLTF_LB_USERNAME}" /></div>
+			<div class="password"><img th:src="@{/platform/img/login/password.png}" class="login-input" alt="Password" /><input type="password" id="password" name="password" th:placeholder="#{PLTF_LB_PASSWORD}" /></div>
 			<button class="btn-login" type="button" th:text="#{PLTF_BTN_LOGIN}"></button>
 			<div class="bottom"> 
 				<div class="save-username"><img th:src="@{/platform/img/login/check.png}" class="save-username-chk" alt="Save Username" /><span>[[#{PLTF_LB_SAVE-USERNAME}]]</span></div>
