--- a/jwebppy/src/main/resources/templates/platform/mgmt/content/main.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/content/main.html
@@ -6,78 +6,62 @@
 
 <th:block layout:fragment="content">
 <!-- body start -->
-<form method="post" action="/platform/mgmt/content/copy">
-<input type"text" name="cSeq"/>
-<input type"text" name="pSeq"/>
-<input type="submit" value="Copy"/>
-</form>
 <div class="ui dividing header">
   Content
   <div class="sub header">You can create Page or consist of Menu and Role. The content is translated into other languages.</div>
 </div>
-<div class="ui segment">
-	<div class="ui stackable grid">
-		<div class="row">
-			<div class="nine wide column">
-				<div class="ui dividing small header">Structure</div>
-				<!-- div class="ui grid">
-					<div class="row">
-						<div class="column">
-							<div class="ui icon input">
-								<i class="search icon"></i> <input class="prompt" type="text" placeholder="Search">
-							</div>
-						</div>
-					</div>
-				</div -->
-				<div class="ui segment teal">
-					<div id="TREE_items"></div>
-				</div>
+<div class="ui stackable grid">
+	<div class="row">
+		<div class="nine wide column">
+			<div class="ui dividing small header">Structure</div>
+			<div class="ui segment teal">
+				<div id="TREE_items"></div>
 			</div>
-			<div class="seven wide column">
-				<div id="AREA_createItem" class="field">
-					<div class="ui dividing small header">Attributes</div>
-					<div id="TAB_viewItem" class="ui attached tabular menu">
-						<a class="item active wrap" data-tab="general">General</a>
-						<a class="item wrap" data-tab="language">Language</a>
-					</div>
-					<div class="ui bottom attached segment">
-						<form id="FORM_modifyItem" class="ui form">
-						<input type="hidden" name="cSeq"/>
-						<input type="hidden" name="pSeq"/>
-							<div class="AREA_modifyItem" style="display: none;">
-								<div class="ui teal button BTN_saveItem"><i class="check icon"></i> Save</div>
-								<div class="ui button modify BTN_cancelItem"><i class="times icon"></i> Cancel</div>
-								<div class="ui clearing divider"></div>									
-							</div>
-							<div class="AREA_moveToModifyItem" style="display: none;">
-								<div class="ui teal button BTN_modifyItem"><i class="edit outline icon"></i> Modify</div>
-								<div class="ui clearing divider"></div>
-							</div>
-							<div class="AREA_moveToViewLang" style="display: none;">
-								<div class="ui teal button BTN_translation"><i class="globe icon"></i> Translation</div>
-								<div class="ui clearing divider"></div>
-							</div>
-							<div class="ui segment tab teal" data-tab="general"></div>
-							<div class="ui segment tab teal" data-tab="language"></div>
-							<div class="AREA_modifyItem" style="display: none;">
-								<div class="ui clearing divider"></div>
-								<div class="ui teal button BTN_saveItem"><i class="check icon"></i> Save</div>
-								<div class="ui button modify BTN_cancelItem"><i class="times icon"></i> Cancel</div>
-							</div>
-							<div class="AREA_moveToModifyItem" style="display: none;">
-								<div class="ui clearing divider"></div>
-								<div class="ui teal button BTN_modifyItem"><i class="edit outline icon"></i> Modify</div>
-							</div>
-							<div class="AREA_moveToViewLang" style="display: none;">
-								<div class="ui clearing divider"></div>
-								<div class="ui teal button BTN_translation"><i class="globe icon"></i> Translation</div>
-							</div>								
-						</form>
-					</div>
+		</div>
+		<div class="seven wide column">
+			<div id="AREA_createItem" class="field">
+				<div class="ui dividing small header">Attributes</div>
+				<div id="TAB_viewItem" class="ui attached tabular menu">
+					<a class="item active wrap" data-tab="general">General</a>
+					<a class="item wrap" data-tab="language">Language</a>
+				</div>
+				<div class="ui bottom attached segment">
+					<form id="FORM_modifyItem" class="ui form">
+					<input type="hidden" name="cSeq"/>
+					<input type="hidden" name="pSeq"/>
+						<div class="AREA_modifyItem" style="display: none;">
+							<div class="ui teal button BTN_saveItem"><i class="check icon"></i> Save</div>
+							<div class="ui button modify BTN_cancelItem"><i class="times icon"></i> Cancel</div>
+							<div class="ui clearing divider"></div>									
+						</div>
+						<div class="AREA_moveToModifyItem" style="display: none;">
+							<div class="ui teal button BTN_modifyItem"><i class="edit outline icon"></i> Modify</div>
+							<div class="ui clearing divider"></div>
+						</div>
+						<div class="AREA_moveToViewLang" style="display: none;">
+							<div class="ui teal button BTN_translation"><i class="globe icon"></i> Translation</div>
+							<div class="ui clearing divider"></div>
+						</div>
+						<div class="ui segment tab teal" data-tab="general"></div>
+						<div class="ui segment tab teal" data-tab="language"></div>
+						<div class="AREA_modifyItem" style="display: none;">
+							<div class="ui clearing divider"></div>
+							<div class="ui teal button BTN_saveItem"><i class="check icon"></i> Save</div>
+							<div class="ui button modify BTN_cancelItem"><i class="times icon"></i> Cancel</div>
+						</div>
+						<div class="AREA_moveToModifyItem" style="display: none;">
+							<div class="ui clearing divider"></div>
+							<div class="ui teal button BTN_modifyItem"><i class="edit outline icon"></i> Modify</div>
+						</div>
+						<div class="AREA_moveToViewLang" style="display: none;">
+							<div class="ui clearing divider"></div>
+							<div class="ui teal button BTN_translation"><i class="globe icon"></i> Translation</div>
+						</div>								
+					</form>
 				</div>
 			</div>
 		</div>
-	</div>		
+	</div>
 </div>
 <form id="FORM_updateLang" method="post">
 <input type="hidden" name="cSeq"/>
@@ -87,6 +71,7 @@
 <th:block th:replace="/platform/common/lang :: addLang"></th:block>
 <!-- End add language -->
 <script type="application/javascript">
+
 	$(document).ready(function() {
 	});
 	
@@ -150,17 +135,6 @@
 												}
 											]
 										},
-										/*
-										Component: {
-											identifier: "component",
-											rules: [
-												{
-													type: "empty",
-													prompt: "Please enter {name}."
-												}
-											]
-										},
-										*/
 										"Valid From": {
 											identifier: "fromValid",
 											rules: [
@@ -213,7 +187,7 @@
 	};
 	
 	let tree = new JpUiTree($("#TREE_items"));
-	tree.icons = {FOLDER: "folder", FOLDER_OPEN: "folder open", PAGE: "file", MENU: "table", ROLE: "th"};
+	tree.icons = {FOLDER: "folder", FOLDER_OPEN: "folder open", PAGE: "file", MENU: "table", ROLE: "user"};
 	tree.onLoad = function()
 	{
 		if (JpUtilsString.isEmpty(getSeq()))
@@ -224,21 +198,21 @@
 			viewItemTab.render();
 		};
 	};
-	tree.viewDetail = function(key, pKey)
+	tree.viewDetail = function(key, pKey, target)
 	{
 		$(".ui.tab[data-tab=general], .ui.tab[data-tab=language]").empty();
 		
 		setSeq(key, pKey);
 		viewItemTab.changeTab("general");
 	};
-	tree.addItem = function(key, pKey)
+	tree.createItem = function(key, pKey)
 	{
 		initSeq();
 	
 		$("#FORM_modifyItem input[name='pSeq']").val(key);
 	
 		viewItemTab.changePath(JpUiGlobal.url("/platform/mgmt/content/modify"));
-		changeTab();		
+		changeTab();
 	};
 	tree.deleteItem = function(key, pKey)
 	{
@@ -256,14 +230,56 @@
 					tree.refresh();
 					changeTab();
 				}
-			});			
+			});
 		};
 	};
-	tree.onPopupMenu = function()
+	tree.pasteItem = function(key, pKey)
 	{
-		//$("#AREA_createItem").show();
-		alert(1);
-	};
+		let previousCommand = tree.getPreviousCommand();
+		let url;
+		
+		for (let i=0, length=tree.commands.length; i<length; i++)
+		{
+			console.log(tree.commands[i]);	
+		};
+		
+		if (previousCommand.COMMAND == "COPY")
+		{
+			url = "/platform/mgmt/content/copy";
+			
+			if (tree.isSubItems())
+			{
+				if (confirm("Do you want to copy including the sub items?"))
+				{
+					url = "/platform/mgmt/content/copy_with_sub_items";	
+				};
+					
+			};
+		}
+		else if (previousCommand.COMMAND == "CUT")
+		{
+			url = "/platform/mgmt/content/move";
+		};
+		
+		if (JpUtilsString.isNotEmpty(url))
+		{
+			let command = tree.getCommand();
+			
+			setSeq(previousCommand.KEY, key);
+			
+			JpUtilsAjax.post({
+				url: JpUiGlobal.url(url),
+				data: $("#FORM_modifyItem").serialize(),
+				success: function(data, textStatus, jqXHR)
+				{
+					initSeq();
+					
+					tree.refresh();
+					changeTab();
+				}
+			});
+		};
+	};	
 	tree.setUrl("/platform/mgmt/content/tree");
 	tree.render();
 	
